--- a/meetup-smart-buildings/library.bib
+++ b/meetup-smart-buildings/library.bib
@@ -59,3 +59,16 @@
   journal = "Statistics and computing",
   year    =  2007
 }
+
+
+
+@ARTICLE{Wang2006-tz,
+  title   = "{Characteristic-Based} Clustering for Time Series Data",
+  author  = "Wang, Xiaozhe and Smith, Kate and Hyndman, Rob",
+  journal = "Data mining and knowledge discovery",
+  volume  =  13,
+  number  =  3,
+  pages   = "335-364",
+  month   =  may,
+  year    =  2006
+}
