--- a/meetup-smart-buildings/smart-buildings.Rmd
+++ b/meetup-smart-buildings/smart-buildings.Rmd
@@ -10,7 +10,7 @@ output:
     css: css/styles.css
     fig_height: 5.5
     fig_width: 10
-    logo: fig/BA-LOGO-RGB-Web-LRG.png
+    logo: fig/logo-combine.png
     widescreen: yes
 ---
 
@@ -46,11 +46,6 @@ data <- read_csv("data/data.csv") %>%
 
 sensor_sample <- sample(unique(data$Sensor), 10)
 ```
-
-## TODO
-
-* Finish BMS section
-* Show a plot of all the time-series overlapping (messy) and then a plot of the spectral embedding dimensionaity reduction (clean!). Maybe show clustering as well.
 
 ## Overview
 
@@ -112,13 +107,14 @@ data %>%
   filter(Sensor %in% sensor_sample,
          Time >= hms(1,1,0),
          Time < hms(1,1,3)) %>% 
-  ggplot(aes(x = Time, fill = Sensor)) +
-  geom_density(bw=100, alpha = 0.7, colour=NA) +
-  geom_rug() + 
+  ggplot() +
+  #geom_density(aes(x = Time, fill = Sensor), bw=100, alpha = 0.7, colour=NA) +
+  #geom_rug() + 
+  geom_vline(aes(xintercept = Time, colour = Sensor)) +
   facet_wrap(~Sensor, scales = "free_y", ncol = 1, strip.position = "right") +
   labs(title = "Sensor reading times",
        x = "Time") +
-  scale_fill_manual(values = ba_palette) +
+  scale_colour_manual(values = ba_palette) +
   theme(legend.position = "none",
         strip.text.y = element_text(angle = 0),
         axis.title.y=element_blank(),
@@ -134,6 +130,8 @@ data %>%
 
 ## What features might be useful? {.smaller}
 
+Feature extraction for clustering discussed in @Wang2006-tz. Some useful features for our case might be
+
 * Mean
 * Standard deviation
 * Kurtosis
@@ -141,9 +139,12 @@ data %>%
 * Biggest change ($\max_i \left\{ \left| y_{t_i} - y_{t_{i-1}} \right| \right\}$)
 * Smallest change ($\min_i \left\{ \left| y_{t_i} - y_{t_{i-1}} \right| \right\}$)
 * Number of "mean crossings" per day
-* Number of observations per day
 
-Normalise these to span the range $\left[ 0, 1\right]$ to prevent certain features dominating the clustering [@Wang2006-tz].
+Normalise these features using their median, $M$, and interquartile range, $IQR$,
+
+$$
+y^* = \frac{y - M}{IQR}.
+$$
 
 ----
 
@@ -168,13 +169,22 @@ data %>%
   filter(Sensor %in% sensor_sample_features) %>% 
   group_by(Sensor) %>% 
   arrange(DT) %>% 
+  mutate(above_mean = Value >= mean(Value, na.rm = TRUE),
+         mean_crossing = (above_mean & !lag(above_mean)) | 
+           (!above_mean & lag(above_mean))) %>% 
   summarise(Mean = mean(Value, na.rm = TRUE),
             `Standard deviation` = sd(Value, na.rm = TRUE),
             Kurtosis = kurtosis(Value, na.rm = TRUE),
             Skewness = skewness(Value, na.rm = TRUE),
             `Max change` = abs(max(Value - lag(Value), na.rm = TRUE)),
-            `Min change` = abs(min(Value - lag(Value), na.rm = TRUE))) %>% 
+            `Min change` = abs(min(Value - lag(Value), na.rm = TRUE)),
+            `Mean crossings` = sum(mean_crossing, na.rm = TRUE)) %>%
+  mutate(Kurtosis = if_else(is.na(Kurtosis), 0, Kurtosis),
+         Skewness = if_else(is.na(Skewness), 0, Skewness)) %>% 
   gather(Var, Value, -Sensor) %>% 
+  group_by(Var) %>% 
+  mutate(Value = (Value - median(Value))/IQR(Value)) %>% 
+  ungroup() %>% 
   ggplot(aes(x=Var, y=Value, colour = Sensor)) +
   geom_col(width = 0) + 
   geom_point() +
@@ -190,6 +200,7 @@ data %>%
 
 * Too many sensors to visualise easily.
 * Use dimensionality reduction.
+* Look for clusters.
 
 ----
 
@@ -210,11 +221,11 @@ Hierarchical clustering | Produces a dendrogram - no "flat" clustering |
 ![Image: @noauthor_2017-gy](fig/cluster_comparison.png)
 </div>
 
-----
+## Obligatory mathematics slide {.smaller}
 
 ### Spectral clustering
 
-Given $n$ points $x_i \in \mathbb{R}^p$. The graph Laplacian is defined as follows
+We are given $n$ points $x_i \in \mathbb{R}^p$ and a similarity matrix $\mathbf{S}$. Define the weight matrix, degree matrix and graph Laplacian as
 
 $$
 \begin{split}
@@ -226,10 +237,10 @@ $$
 
 where,
 
-* $w_{ij}$ is the weight between nodes $i$ and $j$, and,
+* $w_{ij}$ is the weight between nodes $i$ and $j$ based on $\mathbf{S}$, and,
 * $d_i = \sum_{j=1}^n w_{ij}$ is the weighted degree of node $i$.
 
-Find the $m$ eigenvectors $\mathbf{Z}_{n \times m}$ corresponding to the $m$ smallest eigenvalues of $\mathbf{L}$. Cluster the rows of $\mathbf{Z}_{n \times m}$ using K-means.
+Once $\mathbf{L}$ is determined find the $m$ eigenvectors $\mathbf{Z}_{n \times m}$ corresponding to the $m$ smallest eigenvalues of $\mathbf{L}$. Finally, cluster the rows of $\mathbf{Z}_{n \times m}$ using K-means.
 
 
 # Building an end product | Prototyping with Dash
