--- a/meetup-smart-buildings/library.bib
+++ b/meetup-smart-buildings/library.bib
@@ -72,3 +72,23 @@
   month   =  may,
   year    =  2006
 }
+
+
+
+@INCOLLECTION{Nadler2007-cg,
+  title     = "Fundamental Limitations of Spectral Clustering",
+  booktitle = "Advances in Neural Information Processing Systems 19",
+  author    = "Nadler, Boaz and Galun, Meirav",
+  editor    = "Sch{\"o}lkopf, P B and Platt, J C and Hoffman, T",
+  abstract  = "Abstract Spectral clustering methods are common graph-based
+               approaches to clustering of data. Spectral clustering algorithms
+               typically start from local information encoded in a weighted
+               graph on the data and cluster according to the global
+               eigenvectors of the corresponding (normalized) similarity
+               matrix. One contribution of this paper is to present fundamental
+               limitations of this general local to global approach. We show
+               that based only ...",
+  publisher = "MIT Press",
+  pages     = "1017-1024",
+  year      =  2007
+}
