--- a/aceee-2018/aceee-slides.Rmd
+++ b/aceee-2018/aceee-slides.Rmd
@@ -3,13 +3,19 @@ title: "Exploring unusual sensor behaviour in buildings using BMS data and unsup
 author: "Cameron Roach"
 date: "31 July 2018"
 fontsize: 12pt
+#fig_width: 7/2
+#fig_height: 5/2
 output:
   beamer_presentation:
     theme: "metropolis"  # download from https://github.com/matze/mtheme
+    includes:
+      in_header: preamble.tex
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(
+  echo = FALSE
+)
 
 rm(list=ls())
 
@@ -17,7 +23,8 @@ library(tidyverse)
 library(lubridate)
 library(hms)
 require(e1071)
-library(gridExtra)
+# library(gridExtra)
+library(grid)
 
 ba_palette <- c("#3d6b78", "#60bb6b", "#d52f59", "#f5b835", "#2dbbd6",
                 "#816b93", "#b84f80", "#f08c3e", "#c1b97d", "#7e450a",
@@ -31,14 +38,41 @@ ggplot <- function(...) {
     scale_fill_manual(values = ba_palette)
 }
 
-data_dir <- "/home/croach/Documents/data/bms/sensor_ts_presentation"
+data_dir <- "/home/croach/Documents/data/bms"
 
-ts_df <- read_csv(file.path(data_dir, "sensor_ts_presentation.csv")) %>% 
+# Raw sensor time series data
+ts_df <- read_csv(file.path(data_dir, "sensor_ts_presentation/sensor_ts_presentation.csv")) %>% 
   mutate(DT = as.POSIXct(time, origin="1970-01-01"),
          Date = lubridate::date(DT),
          Time = hms::hms(second(DT), minute(DT), hour(DT))) %>% 
   select(-time) %>% 
   rename(Value = value)
+
+# Clustering and dimension reduction data from python
+dr_df = NULL
+cl_df = NULL
+for (iD in list.files(file.path(data_dir, "aceee-paper-data"))) {
+  dr_df <- read_csv(file.path(data_dir, "aceee-paper-data", iD, "dr.csv")) %>% 
+    mutate(Dataset = iD,
+           DR_ALG = case_when(DR_ALG=='SPCA' ~ 'Sparse PCA',
+                              DR_ALG=='SE_NN' ~ 'Spectral Embedding (NN)',
+                              DR_ALG=='SE_RBF' ~ 'Spectral Embedding (RBF)',
+                              TRUE ~ DR_ALG),
+           DR_ALG = factor(DR_ALG, levels=c('PCA', 'Sparse PCA', 'ISOMAP', 't-SNE',
+                                            'Spectral Embedding (NN)',
+                                            'Spectral Embedding (RBF)'))) %>% 
+    bind_rows(dr_df)
+  
+  cl_df <- read_csv(file.path(data_dir, "aceee-paper-data", iD, 'cl.csv')) %>%
+    mutate(Dataset = iD,
+           CL_ALG = case_when(CL_ALG=='KM' ~ 'k-means',
+                              CL_ALG=='AGL' ~ 'Agglomerative',
+                              CL_ALG=='AP' ~ 'Affinity Propagation',
+                              TRUE ~ CL_ALG),
+           CL_ALG = factor(CL_ALG, levels=c('k-means', 'Agglomerative',
+                                            'Affinity Propagation', 'DBSCAN'))) %>%
+  bind_rows(cl_df)
+}
 ```
 
 ## Overview
@@ -101,12 +135,14 @@ p2 <- ts_df %>%
   geom_col(width = 0) + 
   geom_point() +
   facet_wrap(~Sensor, ncol = 1) +
-  labs(title = "Feature generation",
+  labs(title = "Features",
        x = NULL) +
   theme(legend.position = "none") +
   coord_flip()
 
-grid.arrange(p1, p2, nrow = 1)
+# grid.arrange(p1, p2, nrow = 1)
+grid.newpage()
+grid.draw(cbind(ggplotGrob(p1), ggplotGrob(p2), size = "last"))
 ```
 
 
@@ -123,12 +159,106 @@ Several algorithms tested:
 * spectral embedding (nearest neighbours affinity matrix)
 * spectral embedding (radial basis function affinity matrix)
 
+----
+
+```{r plot-dr}
+scale <- function(x) {
+  (x-min(x))/max(x-min(x))
+}
+
+dr_df %>% 
+  filter(Dataset == 'ts_ngram_similar') %>% 
+  group_by(DR_ALG) %>% 
+  mutate(x1 = scale(x1),
+         x2 = scale(x2)) %>% 
+  ggplot(aes(x=x1, y=x2, colour=MEASURE_TYPE)) +
+  geom_jitter(width=0.02, height=0.02) +
+  facet_wrap(~DR_ALG, nrow=2) +
+  labs(x='Component 1', y='Component 2', colour = "Measure Type") +
+  theme(aspect.ratio = 1)
+```
+
+----
+
+```{r}
+p1 <- dr_df %>%
+  filter(DR_ALG == 't-SNE',
+         Dataset %in% c('ts_all', 'ts_ngram_all')) %>%
+  mutate(Dataset = if_else(Dataset=='ts_all', 'Time series features', Dataset),
+         Dataset = if_else(Dataset=='ts_ngram_all', 'Time series and n-gram features', Dataset),
+         Dataset = fct_rev(Dataset)) %>% 
+  ggplot(aes(x=x1, y=x2, colour=MEASURE_TYPE)) +
+  geom_point() +
+  facet_wrap(~Dataset) +
+  labs(x='Component 1', y='Component 2', colour = "Measure Type") +
+  theme(aspect.ratio = 1)
+
+p2 <- dr_df %>% 
+  filter(DR_ALG == 't-SNE',
+         Dataset %in% c('ts_all', 'ts_ngram_all')) %>% 
+  mutate(Dataset = if_else(Dataset=='ts_all', 'Time series features', Dataset),
+         Dataset = if_else(Dataset=='ts_ngram_all', 'Time series and n-gram features', Dataset),
+         Dataset = fct_rev(Dataset)) %>% 
+  ggplot(aes(x=x1, y=x2, colour=BUILDINGID)) +
+  geom_point() +
+  facet_wrap(~Dataset) +
+  labs(x='Component 1', y='Component 2', colour='Building ID') +
+  theme(aspect.ratio = 1)
+```
+
+
+
+\begincols
+  \begincol{.58\textwidth}
+
+```{r plot-ts-ngram-all-2}
+grid.newpage()
+grid.draw(rbind(ggplotGrob(p1), ggplotGrob(p2), size = "last"))
+```
+
+
+  \endcol
+\begincol{.38\textwidth}
+
+Impact of different naming conventions between buildings.
+
+  \endcol
+\endcols
+
+
+
+
 ## Clustering
 
 * k-means
 * agglomerative clustering
 * affinity propagation
 * DBSCAN
+
+----
+
+\begincols
+  \begincol{.58\textwidth}
+
+```{r plot-clusters}
+cl_df %>%
+  filter(Dataset == 'ts_ngram_similar') %>%
+  ggplot(aes(x=x1, y=x2, colour=factor(CLUSTER))) +
+  geom_point() +
+  facet_wrap(~CL_ALG) +
+  labs(x='Component 1', y='Component 2', colour="Cluster") +
+  theme(aspect.ratio = 1,
+        legend.position='none')
+```
+
+
+  \endcol
+\begincol{.38\textwidth}
+
+Here are clustering results!
+
+  \endcol
+\endcols
 
 
 ## Visualising
